Redesign "Kroschke Kennzeichen-Label"

--- a/inetpub/wwwroot/ServicesMvc/ServicesMvc.csproj
+++ b/inetpub/wwwroot/ServicesMvc/ServicesMvc.csproj
@@ -378,6 +378,7 @@
     <Content Include="_Themes\AH2015\images\kennzeichen-etikette.png" />
     <Content Include="_Themes\AH2015\images\kennzeichen.png" />
     <Content Include="_Themes\AH2015\images\kroschke-evb.png" />
+    <Content Include="_Themes\AH2015\images\kroschke-kennzeichen.png" />
     <Content Include="_Themes\AH2015\images\kroschke-prime-flag-down.png" />
     <Content Include="_Themes\AH2015\images\kroschke-prime-flag-up.png" />
     <Content Include="_Themes\AH2015\images\kroschke_costar_logo.png" />
