--- a/dev/MyBoss/MyBoss/MyBoss.csproj
+++ b/dev/MyBoss/MyBoss/MyBoss.csproj
@@ -58,6 +58,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="TaskService.cs" />
     <Page Include="FakeWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
