--- a/.gitignore
+++ b/.gitignore
@@ -277,3 +277,4 @@ Work/GAC/System.Web.WebPages.xml
 inetpub/wwwroot/ServicesMvc/.vs/config/applicationhost.config
 inetpub/wwwroot/Services/packages/
 inetpub/wwwroot/ServicesMvc/App_Data/FileUpload/Temp/*
+Work/Tools/WpfTools4/packages/
