--- a/inetpub/wwwroot/Services/Applications/Vermieter/Vermieter.csproj
+++ b/inetpub/wwwroot/Services/Applications/Vermieter/Vermieter.csproj
@@ -49,6 +49,10 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\GAC\AjaxControlToolkit.dll</HintPath>
     </Reference>
+    <Reference Include="GeneralTools, Version=1.0.5939.19505, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\..\..\Work\GAC\GeneralTools.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Core">
