--- a/inetpub/wwwroot/PortalZLD/Admin/Admin.vbproj
+++ b/inetpub/wwwroot/PortalZLD/Admin/Admin.vbproj
@@ -53,15 +53,15 @@
   <ItemGroup>
     <Reference Include="AjaxControlToolkit, Version=3.0.30930.28736, Culture=neutral, PublicKeyToken=28f01b0e84b6d53e, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\GAC\AjaxControlToolkit.dll</HintPath>
+      <HintPath>..\..\..\..\Work\GAC\AjaxControlToolkit.dll</HintPath>
     </Reference>
     <Reference Include="Aspose.Cells, Version=4.2.0.0, Culture=neutral, PublicKeyToken=716fcc553a201e56">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\GAC\Aspose.Cells.dll</HintPath>
+      <HintPath>..\..\..\..\Work\GAC\Aspose.Cells.dll</HintPath>
     </Reference>
     <Reference Include="DBauer.Web.UI.WebControls.HierarGrid, Version=2.2.0.0, Culture=neutral, PublicKeyToken=0cf700d027f89147">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\GAC\DBauer.Web.UI.WebControls.HierarGrid.dll</HintPath>
+      <HintPath>..\..\..\..\Work\GAC\DBauer.Web.UI.WebControls.HierarGrid.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Configuration.Install" />
