--- a/inetpub/wwwroot/PortalZLD/PortalZLD.vbproj
+++ b/inetpub/wwwroot/PortalZLD/PortalZLD.vbproj
@@ -53,7 +53,10 @@
     <NoWarn>42016,41999,42017,42018,42019,42032,42036,42020,42021,42022,42353,42354,42355</NoWarn>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="AjaxControlToolkit, Version=3.0.30930.28736, Culture=neutral, PublicKeyToken=28f01b0e84b6d53e, processorArchitecture=MSIL" />
+    <Reference Include="AjaxControlToolkit, Version=3.0.30930.28736, Culture=neutral, PublicKeyToken=28f01b0e84b6d53e, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\Work\GAC\AjaxControlToolkit.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
@@ -829,26 +832,6 @@
     <Content Include="Customize\AppKroschke\Kroschke.css" />
     <Content Include="Customize\AppKroschke\KroschkeIE6.css" />
     <Content Include="Default.aspx" />
-    <Content Include="GAC\AjaxControlToolkit.dll" />
-    <Content Include="GAC\Aspose.Cells.dll" />
-    <Content Include="GAC\Aspose.Pdf.dll" />
-    <Content Include="GAC\Aspose.Words.dll" />
-    <Content Include="GAC\BusyBoxDotNet.dll" />
-    <Content Include="GAC\DBauer.Web.UI.WebControls.HierarGrid.dll" />
-    <Content Include="GAC\de\AjaxControlToolkit.resources.dll" />
-    <Content Include="GAC\dk.nita.saml20.dll" />
-    <Content Include="GAC\dsofile.dll" />
-    <Content Include="GAC\eWorld.UI.Compatibility.dll" />
-    <Content Include="GAC\eWorld.UI.dll" />
-    <Content Include="GAC\ICSharpCode.SharpZipLib.dll" />
-    <Content Include="GAC\itextsharp.dll" />
-    <Content Include="GAC\NitobiControls.dll" />
-    <Content Include="GAC\SAP.Connector.dll" />
-    <Content Include="GAC\SmartSoft.PdfLibrary.dll" />
-    <Content Include="GAC\temp\AjaxControlToolkit.dll" />
-    <Content Include="GAC\WebControls.dll" />
-    <Content Include="GAC\WMDQryCln.dll" />
-    <Content Include="GAC\WMDWebLink32Client.dll" />
     <Content Include="Global.asax" />
     <Content Include="Info\ContactPage.aspx" />
     <Content Include="Info\Error.aspx" />
@@ -943,7 +926,7 @@
         <SkipAction>Delete</SkipAction>
         <ObjectName>dirPath</ObjectName>
         <AbsolutePath>$(_Escaped_PackageTempDir)\\*.config</AbsolutePath>
-      </MsDeploySkipRules>	
+      </MsDeploySkipRules>
       <MsDeploySkipRules Include="SkipDeleteBilderFolder">
         <SkipAction>Delete</SkipAction>
         <ObjectName>dirPath</ObjectName>
