einstellbarer serverindividueller Text im Headerbereich, MVC-Part in "Kauf geprägter Kennzeichen" durch WebForms-Implementation ersetzt

--- a/inetpub/wwwroot/PortalZLD/Web.config
+++ b/inetpub/wwwroot/PortalZLD/Web.config
@@ -123,6 +123,7 @@
     <add key="VerbandbuchRemoteLoginKey" value="268ddefa-199e-4ad5-aead-1a8a3013bbf1"/>
     <add key="VerbandbuchRemoteLoginTimestamp" value="OIQMNDPMPH"/>
     <add key="VerbandbuchHostAdress" value="https://sgwt.kroschke.de/ServicesMvc/Verbandbuch/"/>
+    <add key="PortalHeaderHint" value="TESTSYSTEM"/>
   </appSettings>
   <system.web>
     <httpRuntime requestLengthDiskThreshold="256"/>
