--- a/inetpub/wwwroot/ServicesMvc/Web.config
+++ b/inetpub/wwwroot/ServicesMvc/Web.config
@@ -69,7 +69,7 @@
     <add key="ConnectionStringTestServer" value="Data Source=VMS026;initial catalog=AhTestOnPortal;User Id=DADWebAccess;Password=seE?Anemone;persist security info=true;packet size=4096" />
     <add key="ConnectionStringProdServer" value="Data Source=vms012;initial catalog=CKGPortal;User Id=DADWebAccess;Password=seE?Anemone;persist security info=true;packet size=4096" />
 
-    <add key="DefaultLayoutTheme" value="AH2015" />
+    <add key="DefaultLayoutTheme" value="" />
     <add key="LayoutPageHeaderHint" value="Test-Server" />
 
     <!-- Durch Angabe einer separaten css-Datei kann der Style Portal-abhängig übersteuert werden -->
