Neues Image zu Projekt hinzugefügt

--- a/inetpub/wwwroot/PortalZLD/PortalZLD.vbproj
+++ b/inetpub/wwwroot/PortalZLD/PortalZLD.vbproj
@@ -679,6 +679,7 @@
     <Content Include="Images\User01_06.jpg" />
     <Content Include="Images\User02_06.jpg" />
     <Content Include="Images\user_Hover.png" />
+    <Content Include="Images\versand.png" />
     <Content Include="Images\Verwaltung.png" />
     <Content Include="Images\vkb_logo.jpg" />
     <Content Include="Images\Wappen01_10.jpg" />
