--- a/inetpub/wwwroot/ServicesMvc/ServicesMvc.csproj
+++ b/inetpub/wwwroot/ServicesMvc/ServicesMvc.csproj
@@ -1032,7 +1032,6 @@
     <Content Include="Areas\Common\Views\GridAdmin\Test.cshtml" />
     <Content Include="Areas\Common\Views\GridAdmin\Partial\Common.cshtml" />
     <Content Include="Areas\Fahrzeug\Views\_ViewStart.cshtml" />
-    <Content Include="Areas\Fahrzeug\Views\Zulassung\Index.cshtml" />
     <Content Include="Areas\Admin\Views\_ViewStart.cshtml" />
     <Content Include="Areas\Admin\Views\AppUserOverview\Partial\AppUserOverviewGrid.cshtml" />
     <Content Include="Areas\Admin\Views\AppUserOverview\Partial\SucheAppUserOverview.cshtml" />
@@ -3172,6 +3171,9 @@
     <Content Include="Views\Leasing\UnzugelasseneFahrzeuge\Grid.cshtml" />
     <Content Include="Views\Leasing\UnzugelasseneFahrzeuge\BemerkungErfassenAendernForm.cshtml" />
     <Content Include="Views\Leasing\UnzugelasseneFahrzeuge.cshtml" />
+    <Content Include="Views\Leasing\EndgueltigerVersand.cshtml" />
+    <Content Include="Views\Leasing\EndgueltigerVersand\EndgueltigerVersandSuche.cshtml" />
+    <Content Include="Views\Leasing\EndgueltigerVersand\EndgueltigerVersandGrid.cshtml" />
     <None Include="Web.config">
       <SubType>Designer</SubType>
     </None>
@@ -3231,6 +3233,7 @@
     <Folder Include="assets\plugins\jquery-validation\test\qunit\" />
     <Folder Include="assets\plugins\jquery-validation\test\selects\" />
     <Folder Include="TmpUpload\Images\" />
+    <Folder Include="Views\_Page_Views_EndgueltigerVersand_cshtml\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
