--- a/inetpub/wwwroot/PortalZLD/Applications/AppZulassungsdienst/AppZulassungsdienst.csproj
+++ b/inetpub/wwwroot/PortalZLD/Applications/AppZulassungsdienst/AppZulassungsdienst.csproj
@@ -113,6 +113,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AssemblyInfo.cs" />
+    <Compile Include="Controls\BankdatenAdresse.ascx.cs">
+      <DependentUpon>BankdatenAdresse.ascx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Controls\BankdatenAdresse.ascx.designer.cs">
+      <DependentUpon>BankdatenAdresse.ascx</DependentUpon>
+    </Compile>
     <Compile Include="Controls\DialogErfassungDLBezeichnung.ascx.cs">
       <DependentUpon>DialogErfassungDLBezeichnung.ascx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -608,6 +615,7 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Controls\BankdatenAdresse.ascx" />
     <Content Include="Controls\DialogErfassungDLBezeichnung.ascx" />
     <Content Include="forms\AHVersandChange.aspx" />
     <Content Include="forms\AHVersandChange_2.aspx" />
@@ -754,7 +762,7 @@
           <SaveServerSettingsInUserFile>False</SaveServerSettingsInUserFile>
         </WebProjectProperties>
       </FlavorProperties>
-      <UserProperties BuildVersion_ConfigurationName="Release" BuildVersion_StartDate="2012/9/4" BuildVersion_AssemblyInfoFilename="AssemblyInfo.cs" BuildVersion_UpdateAssemblyVersion="True" BuildVersion_BuildVersioningStyle="None.None.Increment.TimeStamp" />
+      <UserProperties BuildVersion_BuildVersioningStyle="None.None.Increment.TimeStamp" BuildVersion_UpdateAssemblyVersion="True" BuildVersion_AssemblyInfoFilename="AssemblyInfo.cs" BuildVersion_StartDate="2012/9/4" BuildVersion_ConfigurationName="Release" />
     </VisualStudio>
   </ProjectExtensions>
   <PropertyGroup>
