CryptoMD5 -> CryptoMD5Web und Projektverweis

--- a/Work/BtBase/BtBaseMvc/BtBaseMvc/BtBaseMvc.csproj
+++ b/Work/BtBase/BtBaseMvc/BtBaseMvc/BtBaseMvc.csproj
@@ -51,15 +51,16 @@
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
-    <Reference Include="WebTools35">
-      <HintPath>..\..\..\GAC\WebTools35.dll</HintPath>
-    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MVC.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\..\Tools\WebTools35\WebTools35.csproj">
+      <Project>{772437C2-C72D-4F33-9727-312F8868C94D}</Project>
+      <Name>WebTools35</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\Base.vbproj">
       <Project>{B10B1992-6D06-42B3-97C6-18CBB9D0725A}</Project>
       <Name>Base</Name>
