--- a/inetpub/wwwroot/ServicesMvc/ServicesMvc.csproj
+++ b/inetpub/wwwroot/ServicesMvc/ServicesMvc.csproj
@@ -475,8 +475,8 @@
     <Content Include="Areas\Autohaus\Views\Zulassung\Partial\VersandDienstleisterForm.cshtml" />
     <Content Include="Documents\Templates\KfzKennzeichengroessen.pdf" />
     <Content Include="Areas\Admin\Views\AppBatchZuordnung\Index.cshtml" />
-    <Content Include="Areas\Admin\Views\AppBatchZuordnung\Partial\Suche.cshtml" />
-    <Content Include="Areas\Admin\Views\AppBatchZuordnung\Partial\Grid.cshtml" />
+    <Content Include="Areas\Admin\Views\AppBatchZuordnung\Partial\GridAppZuordnungen.cshtml" />
+    <Content Include="Areas\Admin\Views\AppBatchZuordnung\Partial\GridApplications.cshtml" />
     <None Include="Teamviewer-Support.zip">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
@@ -900,7 +900,6 @@
     <Compile Include="Areas\Admin\Models\AppUserOverviewResults.cs" />
     <Compile Include="Areas\Admin\Models\AppUserOverviewSelektor.cs" />
     <Compile Include="Areas\Admin\Models\AppZuordnung.cs" />
-    <Compile Include="Areas\Admin\Models\AppBatchZuordnungSelektor.cs" />
     <Compile Include="Areas\Admin\Services\AppUserOverviewDataService.cs" />
     <Compile Include="Areas\Admin\Services\AppBatchZuordnungDataService.cs" />
     <Compile Include="Areas\Admin\ViewModels\AppUserOverviewViewModel.cs" />
