--- a/inetpub/wwwroot/ServicesMvc/ServicesMvc.csproj
+++ b/inetpub/wwwroot/ServicesMvc/ServicesMvc.csproj
@@ -3172,6 +3172,9 @@
     <Content Include="Views\Wfm\Abmeldevorgaenge\Partial\Rechercheprotokoll.cshtml" />
     <Content Include="Views\Wfm\Abmeldevorgaenge\Partial\RechercheprotokollPartial.cshtml" />
     <Content Include="Views\Wfm\Abmeldevorgaenge\Partial\RechercheprotokollVersuchPartial.cshtml" />
+    <Content Include="Views\Equi\Historie\HistorieRemarketingSuche.cshtml" />
+    <Content Include="Views\Equi\Historie\HistorieRemarketingGrid.cshtml" />
+    <Content Include="Views\Equi\FahrzeugHistorieRemarketing.cshtml" />
     <None Include="Web.config">
       <SubType>Designer</SubType>
     </None>
