--- a/inetpub/wwwroot/ServicesMvc/ServicesMvc.csproj
+++ b/inetpub/wwwroot/ServicesMvc/ServicesMvc.csproj
@@ -3172,7 +3172,8 @@
     <Content Include="Views\Wfm\Abmeldevorgaenge\Partial\Rechercheprotokoll.cshtml" />
     <Content Include="Views\Wfm\Abmeldevorgaenge\Partial\RechercheprotokollPartial.cshtml" />
     <Content Include="Views\Wfm\Abmeldevorgaenge\Partial\RechercheprotokollVersuchPartial.cshtml" />
-    <Content Include="Views\Fahrer\Auftragsauswahl.cshtml" />
+    <Content Include="Views\Fahrer\FreieAuftraege.cshtml" />
+    <Content Include="Views\Fahrer\Partial\Auftraege\FreieAuftraegeGrid.cshtml" />
     <None Include="Web.config">
       <SubType>Designer</SubType>
     </None>
